--- a/oefening-01-02/css/style.css
+++ b/oefening-01-02/css/style.css
@@ -25,3 +25,13 @@ a, a:hover {
   color: #ca8446;
   background-color: #fff;
 }
+
+.img-small 
+{
+  height: 100px;
+  width: 100px;
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-left: 0px;
+  padding-bottom: 20px;
+}
